libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-labels-non-string.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected a string value for key "service" at 1:53
	  1 | resource r: aws/x { metadata { labels = { service = 42 } }
	    |                                                     ^
	- parse error: missing required 'version' directive
