libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-removal-policy-invalid.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: removalPolicy must be "delete" or "retain", got "destroy" at 2:37
	  2 | resource r: aws/x { removalPolicy = "destroy"
	    |                                     ^
