libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-removal-policy-non-literal.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: removalPolicy must be a literal string, got keyword "variables" at 1:37
	  1 | resource r: aws/x { removalPolicy = variables.policy
	    |                                     ^
	- parse error: missing required 'version' directive
