libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-removal-policy.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {
            "ordersTable": Resource {
                res_type: Spanned {
                    value: "aws/dynamodb/table",
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 23,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 41,
                                },
                            ),
                        },
                    ),
                },
                description: None,
                metadata: None,
                depends_on: [],
                condition: None,
                each: None,
                link_selector: None,
                removal_policy: Some(
                    Spanned {
                        value: Retain,
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 21,
                                },
                                end: Some(
                                    Position {
                                        line: 4,
                                        column: 29,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                spec: Fields {
                    fields: {
                        "tableName": Scalar(
                            Scalar {
                                value: String(
                                    "Orders",
                                ),
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 7,
                                            column: 21,
                                        },
                                        end: Some(
                                            Position {
                                                line: 7,
                                                column: 29,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                    fields_span: {
                        "tableName": Span {
                            start: Position {
                                line: 7,
                                column: 9,
                            },
                            end: Some(
                                Position {
                                    line: 7,
                                    column: 18,
                                },
                            ),
                        },
                    },
                    span: Some(
                        Span {
                            start: Position {
                                line: 6,
                                column: 10,
                            },
                            end: Some(
                                Position {
                                    line: 8,
                                    column: 6,
                                },
                            ),
                        },
                    ),
                },
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 21,
                            },
                        ),
                    },
                ),
                fields_source_meta: {
                    "removalPolicy": Span {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Some(
                            Position {
                                line: 4,
                                column: 29,
                            },
                        ),
                    },
                    "spec": Span {
                        start: Position {
                            line: 6,
                            column: 5,
                        },
                        end: Some(
                            Position {
                                line: 8,
                                column: 6,
                            },
                        ),
                    },
                },
            },
        },
        source_meta: {
            "ordersTable": Span {
                start: Position {
                    line: 3,
                    column: 10,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 21,
                    },
                ),
            },
        },
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
