libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-select-exclude.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {
            "saveOrderFunction": Resource {
                res_type: Spanned {
                    value: "aws/lambda/function",
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 29,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 48,
                                },
                            ),
                        },
                    ),
                },
                description: None,
                metadata: None,
                depends_on: [],
                condition: None,
                each: None,
                link_selector: Some(
                    LinkSelector {
                        by_label: NamedMap {
                            values: {
                                "service": "ordersApi",
                            },
                            source_meta: {
                                "service": Span {
                                    start: Position {
                                        line: 5,
                                        column: 9,
                                    },
                                    end: Some(
                                        Position {
                                            line: 5,
                                            column: 16,
                                        },
                                    ),
                                },
                            },
                        },
                        exclude: [
                            Spanned {
                                value: "testOrdersTable",
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 6,
                                            column: 20,
                                        },
                                        end: Some(
                                            Position {
                                                line: 6,
                                                column: 35,
                                            },
                                        ),
                                    },
                                ),
                            },
                            Spanned {
                                value: "legacyOrdersTable",
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 6,
                                            column: 37,
                                        },
                                        end: Some(
                                            Position {
                                                line: 6,
                                                column: 56,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ],
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 5,
                                },
                                end: Some(
                                    Position {
                                        line: 7,
                                        column: 6,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                removal_policy: None,
                spec: Fields {
                    fields: {
                        "functionName": Scalar(
                            Scalar {
                                value: String(
                                    "saveOrderFunction",
                                ),
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 10,
                                            column: 24,
                                        },
                                        end: Some(
                                            Position {
                                                line: 10,
                                                column: 43,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                    fields_span: {
                        "functionName": Span {
                            start: Position {
                                line: 10,
                                column: 9,
                            },
                            end: Some(
                                Position {
                                    line: 10,
                                    column: 21,
                                },
                            ),
                        },
                    },
                    span: Some(
                        Span {
                            start: Position {
                                line: 9,
                                column: 10,
                            },
                            end: Some(
                                Position {
                                    line: 11,
                                    column: 6,
                                },
                            ),
                        },
                    ),
                },
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 27,
                            },
                        ),
                    },
                ),
                fields_source_meta: {
                    "linkSelector": Span {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Some(
                            Position {
                                line: 7,
                                column: 6,
                            },
                        ),
                    },
                    "spec": Span {
                        start: Position {
                            line: 9,
                            column: 5,
                        },
                        end: Some(
                            Position {
                                line: 11,
                                column: 6,
                            },
                        ),
                    },
                },
            },
        },
        source_meta: {
            "saveOrderFunction": Span {
                start: Position {
                    line: 3,
                    column: 10,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 27,
                    },
                ),
            },
        },
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
