libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-select-missing-by.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected keyword "by", got '{' at 1:28
	  1 | resource r: aws/x { select { service = "ordersApi" }
	    |                            ^
	- parse error: missing required 'version' directive
