libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-spec-missing.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: resource "r" is missing the required 'spec { ... }' block at 2:10
	  2 | resource r: aws/x { description = "desc" }
	    |          ^
