libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__resource-unknown-field.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: unknown field "foo" in resource declaration at 1:21
	  1 | resource r: aws/x { foo = "bar"
	    |                     ^
	- parse error: missing required 'version' directive
