libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__transform-multiple.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [
        Spanned {
            value: "celerity-2027-02-01",
            span: Some(
                Span {
                    start: Position {
                        line: 3,
                        column: 12,
                    },
                    end: Some(
                        Position {
                            line: 3,
                            column: 33,
                        },
                    ),
                },
            ),
        },
        Spanned {
            value: "my-org/macros",
            span: Some(
                Span {
                    start: Position {
                        line: 3,
                        column: 35,
                    },
                    end: Some(
                        Position {
                            line: 3,
                            column: 50,
                        },
                    ),
                },
            ),
        },
    ],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
